<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/writeChangePasswordHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/courier_prime_bold_italic"
        android:gravity="center"
        android:text="@string/writeChangePasswordHead"
        android:textColor="@color/black"
        android:textSize="40sp" />
    <EditText
        android:id="@+id/old_password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:hint="@string/old_password"
        android:inputType="textVisiblePassword"/>


    <EditText
        android:id="@+id/new_password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/new_password"
        android:inputType="textVisiblePassword" />

    <EditText
        android:id="@+id/renter_new_password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/renter_new_password"
        android:inputType="textVisiblePassword"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_btn" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/cancel_btn" />
    </LinearLayout>
</LinearLayout>