<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/writeReviewHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_a_review" />

    <EditText
        android:id="@+id/writeReviewText"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:hint="@string/writeReviewText"
        android:inputType="text" />

    <RatingBar
        android:id="@+id/submit_rating_bar"
        style="@style/Widget.AppCompat.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submitBtn" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/cancel_btn" />
    </LinearLayout>

</LinearLayout>