<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ViewRecipeActivity">

    <!--find out how to show all images slider-->
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearlayout_review_bookmarks">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/project_name" />
    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/courier_prime_bold_italic"
        android:text="@string/recipe_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/calories"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="0.3"
            android:layout_column="0"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/calories"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/prep_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="0.3"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/prep_time"
            app:layout_constraintStart_toEndOf="@+id/calories" />

        <RatingBar
            android:id="@+id/view_rating_bar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="2"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/prep_time"
            tools:layout_editor_absoluteY="0dp" />
        <TextView
            android:id="@+id/rating"
            app:layout_constraintTop_toBottomOf="@id/view_rating_bar"
            android:layout_marginStart="100dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rating" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/ingredients_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients_header"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:fontFamily="@font/courier_prime_bold_italic"
        android:textSize="22sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/ingredients"/>

    <TextView
        android:id="@+id/steps_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/steps_header"
        android:fontFamily="@font/courier_prime_bold_italic"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/steps"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/review_header"
        android:text="Reviews"
        android:layout_gravity="center"
        android:textColor="@color/black"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/recycler_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/more_like_this_header"
    android:text="More Like This"
    android:layout_gravity="center"
    android:textColor="@color/black"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/more_like_this_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

</LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/linearlayout_review_bookmarks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav">

        <Button
            android:id="@+id/write_a_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/write_a_review" />
        <Button
            android:id="@+id/add_bookmark_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:textColor="@color/black"
            android:text="@string/add_to_bookmark" />
    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        app:layout_constraintHeight_percent="0.09"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#fff"
        app:menu="@menu/bottom_menu_view_recipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_review_bookmarks"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>